--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Daniel Kim</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" /> -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
