--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,9 @@
   <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" /> -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <div id="app"></div>
