--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-  <script src="script.js"></script>
+  <script type='text/javascript' src="script.js"></script>
 </head>
 <body>
   <div id="app"></div>
