--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
   <script type='text/javascript' src="script.js"></script>
 </head>
